Removal of some complexity, but more to do. Added a specific run time exception for compiler failures. A few additional tests after SonarLint Another basic tidy after SonarLint Basic refactoring from SonarLint